--- a/_posts/2022-02-06-unity0.md
+++ b/_posts/2022-02-06-unity0.md
@@ -1,7 +1,7 @@
 ---
 title: "[Unity] 컴파일 방식 - IL2CPP"
 # layout: single
-categories: git
+categories: unity
 tag: 
   - il2cpp
   - unity
@@ -28,7 +28,7 @@ IL2CPP는 Unity 프로젝트의 성능, 보안 및 플랫폼 호환성을 개선
  
 --- 
 
-#### <IL 코드>
+#### \<IL 코드\>
 
 C# 코드를 빌드하면 MSIL이라는 중간코드(Intermediate Language)를 만들어 냅니다. 프로그램 실행시 이 IL 코드는 JIT Compiler에 의해 컴파일 되어 Native코드로 변경됩니다. IL 방식의 가장 큰 장점은 실행 머신 환경에 관계없이 동일 코드를 실행 할 수 있다는 것입니다. 하지만 실행시 IL코드를 컴파일 해야하기 때문에 속도가 저하의 원인이 된다는 단점도 있습니다. .NET에서는 이러한 문제를 해결하기 위해 프로그램 실행시 전체 IL코드를 컴파일하는 것이 아니라 호출되는 메서드단위로 컴파일을 실행합니다. 따라서 어떤 메서드가 한번도 호출되지 않는다면 해당 메서드는 Native 코드로 변경되지 않습니다.    
 
@@ -37,7 +37,7 @@ CIL    :  Common Intermediate Language
 
 ---
 
-#### <IL2CPP 작동방식>
+#### \<IL2CPP 작동방식\>
 1. Unity 스크립팅 API코드를 일반 .NET DLL로 컴파일
 2. 관리되는 바이트코드 스트리핑을 적용 -> 빌드된 게임의 크기를 크게 줄여줍니다.
 3. 모든 관리되는 어셈블리를 표준 C++ 코드로 전환
@@ -50,7 +50,7 @@ CIL    :  Common Intermediate Language
 
 --- 
 
-#### <IL2CPP 빌드 시간 최적화>
+#### \<IL2CPP 빌드 시간 최적화\>
 
 1. 증분 빌드 사용
   - 증분 빌드를 사용하면 C++ 컴파일러가 마지막 빌드 후 변경된 파일만 다시 컴파일한다고 합니다.
@@ -65,9 +65,10 @@ CIL    :  Common Intermediate Language
 
 --- 
 
-<추가>    
+\<추가\>    
 
-[IL2CPP 해킹](http://linforum.kr/bbs/board.php?bo_table=android&wr_id=4&sca=%EA%B0%95%EC%A2%8C&page=2)
+[IL2CPP 해킹](http://linforum.kr/bbs/board.php?bo_table=android&wr_id=4&sca=%EA%B0%95%EC%A2%8C&page=2)   
 
-![unity0](https://user-images.githubusercontent.com/46421475/152694310-60b9fbdc-60d1-4941-8d18-136e355e9e26.png)
-마무리 짱구
+
+![unity0](https://user-images.githubusercontent.com/46421475/152694310-60b9fbdc-60d1-4941-8d18-136e355e9e26.png)   
+- 마무리 짱구
