--- a/_posts/2022-02-06-unity0.md
+++ b/_posts/2022-02-06-unity0.md
@@ -69,6 +69,7 @@ CIL    :  Common Intermediate Language
 
 [IL2CPP 해킹](http://linforum.kr/bbs/board.php?bo_table=android&wr_id=4&sca=%EA%B0%95%EC%A2%8C&page=2)   
 
-
-![unity0](https://user-images.githubusercontent.com/46421475/152694310-60b9fbdc-60d1-4941-8d18-136e355e9e26.png)   
-- 마무리 짱구
+![unity0](https://user-images.githubusercontent.com/46421475/152694310-60b9fbdc-60d1-4941-8d18-136e355e9e26.png){: .align-center}
+<div align="center">  
+  마무리 짱구
+</div>
