edit git post 1

--- a/_posts/2022-02-08-git1.md
+++ b/_posts/2022-02-08-git1.md
@@ -62,20 +62,44 @@ master <-> main 간 기본브랜치명 변경 이슈도 있고 해서 추가
 > **github**   
 > repository를 생성시 설정하거나 관련 setting에서 변경해 줄 수 있다.
 > ![git_post_1_0](https://user-images.githubusercontent.com/46421475/154085274-f79f9499-636c-4215-a3b7-b34dd6dcb5d1.png)
+> 
 > ![git_post_1_1](https://user-images.githubusercontent.com/46421475/154085287-bbb0a394-c4fd-4fc9-8888-9dada19e0fd9.png)
 
-#### 작업도중 변경
+#### 브랜치 변경 (나중에 브랜치에서 자세하게)
 
 1. 원격저장소의 브랜치명에 맞춰 `로컬 저장소 브랜치명 변경`
-    - 기본 브랜치
-    - 브랜치
-2. 로컬저장소의 브랜치명에 맞춰 `원격 저장소 브랜치명 변경`
-    - 기본 브랜치
-    - 브랜치
+  - 로컬브랜치를 원격브랜치에 연결하고자 한다면 브랜치를 생성하는게 일반적이지만 혹시 브랜치명을 변경하고 싶다면
+  - `git branch -m oldbranch newbranch`를 통해 브랜치명을 변경 후 `git fetch`
+  - 로컬 - 원격 브랜치명이 같다면 다른 작업없이도 알아서 연결된다.
+2. 로컬저장소의 브랜치명에 맞춰 `원격 저장소 브랜치명 변경`       
+  - 원격브랜치는 사실 로컬이 반영된 리포지토리이기에 브랜치명을 바꿀 일은 사실 거의 없다.
+  - github를 통해 쉽게 브랜치명을 바꾸거나
+  - 로컬에서 oldbranch를 삭제하고 newbranch를 만드는 정도의 방법이 있다.
 
 ---
 
 ### alias
+
+config alias를 통해 명령어에 별칭을 지정할 수 있다.   
+```
+$ git config alias.co checkout
+$ git config alias.br branch
+$ git config alias.ci commit
+$ git config alias.st status
+```
+이와 같이 설정하면 `git ci`만으로 커밋 할 수 있다.   
+
+단순 명령어 뿐아니라 `$ git config --global alias.last 'log -1 HEAD'` 처럼 구문자체도 사용할 수 있다.   
+개인적인 추리로는 alias를 사용하면 마치 인라인 함수처럼 `log -1 HEAD`(사용하려는 기능)이 `last`(alias) 대신 삽입되어 사용되는게 아닌가 싶다.   
+
+**외부 명령어**   
+alias는 git의 명령어 뿐 아니라 외부명령어도 실행 할 수 있다.   
+외부명령어는 명령어 앞에 `!`를 붙여 사용하고 명령어도 `''`로 감싸줘야 한다.   
+```
+$ git config alias.make '!vi'
+$ git make somefile.txt
+  => vi somefile.txt 와 동일
+```
 
 ---
 
