--- a/_posts/Basic/2022-02-07-CLI(fin).md
+++ b/_posts/Basic/2022-02-07-CLI(fin).md
@@ -1,7 +1,7 @@
 ---
-title: "[git][기초] git 사용을 위한 CLI 환경"
+title: "[프로그래밍][기초] git 사용을 위한 CLI 환경"
 # layout: single
-categories: git
+categories: base
 tag:
   - CLI
   - git bash
